--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "build": "expo build:android -t apk"
+    "build:apk": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
