--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "RAT TICK",
-    "slug": "rattick",
+    "name": "RatTick",
+    "slug": "tick-shit",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/man_icon_whites.png",
+    "icon": "./assets/adaptive-icon-white.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/man_icon_splash.png",
+      "image": "./assets/splash-man.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/man_icon.png",
+        "foregroundImage": "./assets/adaptive-man-icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.rattick.rattick",
